# ai-chat-sandbox

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/specs/: 2026-05-21-ai-chat-sandbox-design.md
docs/superpowers/plans/: 2026-05-21-ai-chat-sandbox-plan.md  2026-05-22-sandbox-capabilities-expansion.md
src/: agent.py  config.py  server.py  session.py
src/llm/: anthropic_llm.py  base.py  openai_llm.py
src/tools/: base.py  builtin.py  sandbox.py
static/: index.html
static/js/: app.js
