[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-chat-sandbox"
version = "0.1.0"
description = "AI 聊天应用 — LLM Agent 驱动的沙箱浏览器/Shell/文件/代码工具"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/example/ai-chat-sandbox"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
